@@ -24,7 +24,6 @@ import org.elasticsearch.common.xcontent.json.JsonXContent;
 import org.elasticsearch.common.xcontent.smile.SmileXContent;
 import org.elasticsearch.common.xcontent.yaml.YamlXContent;
 
-import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
 
@@ -58,14 +57,14 @@ public enum XContentType implements MediaType {
         }
 
         @Override
-        public Set<MediaType.MediaTypeValue> mediaTypeValues() {
+        public Set<HeaderValue> headerValues() {
             return Set.of(
-                new MediaType.MediaTypeValue("application/json", Map.of("charset", "UTF-8")),
-                new MediaType.MediaTypeValue("application/x-ndjson", Map.of("charset", "UTF-8")),
-                new MediaType.MediaTypeValue("application/*", Collections.emptyMap()),
-                new MediaType.MediaTypeValue(VENDOR_APPLICATION_PREFIX +"json",
+                new HeaderValue("application/json", Map.of("charset", "UTF-8")),
+                new HeaderValue("application/x-ndjson", Map.of("charset", "UTF-8")),
+                new HeaderValue("application/*"),
+                new HeaderValue(VENDOR_APPLICATION_PREFIX +"json",
                     Map.of(COMPATIBLE_WITH_PARAMETER_NAME, VERSION_PATTERN, "charset", "UTF-8")),
-                new MediaType.MediaTypeValue(VENDOR_APPLICATION_PREFIX +"x-ndjson",
+                new HeaderValue(VENDOR_APPLICATION_PREFIX +"x-ndjson",
                     Map.of(COMPATIBLE_WITH_PARAMETER_NAME, VERSION_PATTERN, "charset", "UTF-8")));
         }
     },
@@ -89,10 +88,10 @@ public enum XContentType implements MediaType {
         }
 
         @Override
-        public Set<MediaType.MediaTypeValue> mediaTypeValues() {
+        public Set<HeaderValue> headerValues() {
             return Set.of(
-                new MediaType.MediaTypeValue("application/smile", Map.of("charset", "UTF-8")),
-                new MediaType.MediaTypeValue(VENDOR_APPLICATION_PREFIX +"smile",
+                new HeaderValue("application/smile", Map.of("charset", "UTF-8")),
+                new HeaderValue(VENDOR_APPLICATION_PREFIX +"smile",
                     Map.of(COMPATIBLE_WITH_PARAMETER_NAME, VERSION_PATTERN, "charset", "UTF-8")));
         }
     },
@@ -116,10 +115,10 @@ public enum XContentType implements MediaType {
         }
 
         @Override
-        public Set<MediaType.MediaTypeValue> mediaTypeValues() {
+        public Set<HeaderValue> headerValues() {
             return Set.of(
-                new MediaType.MediaTypeValue("application/yaml", Map.of("charset", "UTF-8")),
-                new MediaType.MediaTypeValue(VENDOR_APPLICATION_PREFIX +"yaml",
+                new HeaderValue("application/yaml", Map.of("charset", "UTF-8")),
+                new HeaderValue(VENDOR_APPLICATION_PREFIX +"yaml",
                     Map.of(COMPATIBLE_WITH_PARAMETER_NAME, VERSION_PATTERN, "charset", "UTF-8")));
         }
     },
@@ -143,10 +142,10 @@ public enum XContentType implements MediaType {
         }
 
         @Override
-        public Set<MediaType.MediaTypeValue> mediaTypeValues() {
+        public Set<HeaderValue> headerValues() {
             return Set.of(
-                new MediaType.MediaTypeValue("application/cbor", Map.of("charset", "UTF-8")),
-                new MediaType.MediaTypeValue(VENDOR_APPLICATION_PREFIX +"cbor",
+                new HeaderValue("application/cbor", Map.of("charset", "UTF-8")),
+                new HeaderValue(VENDOR_APPLICATION_PREFIX +"cbor",
                     Map.of(COMPATIBLE_WITH_PARAMETER_NAME, VERSION_PATTERN,"charset", "UTF-8")));
         }
     };
